@@ -26,6 +26,11 @@ $ -> Language fix or change
 ! -> Note
 
 2014-09-20 Christophe Demko <chdemko@gmail.com>
+	* src/fr/kbertet/dgraph/Edge.iuml
+	* src/fr/kbertet/dgraph/Edge.java
+		+ Add methods
+
+2014-09-20 Christophe Demko <chdemko@gmail.com>
 	* src/fr/kbertet/dgraph/DGraph.java
 	* src/fr/kbertet/dgraph/Node.iuml
 	* src/fr/kbertet/dgraph/Node.java
